<resources>
    <string name="app_name">AutomobileStore</string>


    <string name="title_home">Dashboard</string>
    <string name="title_dashboard">Wishlist</string>
    <string name="title_notifications">Account</string>

    <string name="title1">Welcome</string>
    <string name="title2">Buy a car</string>
    <string name="title3">Sell your car</string>
    <string name="title_description">This app helps you find     your perfectly budget friendly car.</string>
    <string name="title_description3">Earn money by selling your car. Make a price and attract buyers.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="confirm_new_password">Confirm New Password*</string>
    <string name="new_password">New Password*</string>
    <string name="current_password">Current Password*</string>
<!--    <string name="rentals">Rentals</string>-->
    <string name="discard_changes">Discard Changes</string>
    <string name="update_password">Update Password</string>
    <string name="security">Security</string>

    <string name="update_profile">Update Profile</string>
    <string name="_1234567890">1234567890</string>
    <string name="automotiv">AutoMotiv</string>
    <string name="car_classification">Car Classification</string>
    <string name="yes">Yes</string>
    <string name="seaters_capacity">Seaters Capacity</string>
    <string name="no">No</string>
    <string name="blind_spot_sensor">Blind Spot Sensor</string>
    <string name="heat">Heat</string>
    <string name="post_ad">Post Ad</string>
    <string name="used">Used</string>
    <string name="model">Model</string>
    <string name="manual">Manual</string>
    <string name="engine_power_kw">Engine Power(kW)</string>
    <string name="condition">condition</string>
    <string name="visual_aids">Visual Aids</string>
    <string name="sun_roof">Sun Roof</string>
    <string name="manufacturing_year">Manufacturing year</string>
    <string name="description">Description</string>
    <string name="power_window">Power Window</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="transmission">Transmission</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="electric">Electric</string>
    <string name="color">color</string>
    <string name="automatic">Automatic</string>
    <string name="air_conditioning_heater">Air Conditioning /Heater</string>
    <string name="fueltype">FuelType</string>
    <string name="parking_sensors">Parking Sensors</string>
    <string name="airbags">Airbags</string>
    <string name="gps">Gps</string>
    <string name="phone_number">Phone Number</string>
    <string name="amount">$ Amount</string>
    <string name="todo">TODO</string>
    <string name="new_car">New</string>
    <string name="Address">Address</string>
    <string name="Choose_Your_Car">Choose Your Car</string>
    <string name="hint">Search Model, City, Car Type</string>
    <string name="Passengers">Passengers</string>
    <string name="Price">Price</string>
    <string name="Profile">Profile</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="reset_password">Send Password Reset Link</string>
    <string name="Name_Email_Phone">Name, Email, Phone</string>
    <string name="Manage_Posts">Manage Posts</string>
    <string name="Update_Delete_your_old_posts">Update, Delete your old posts</string>
    <string name="see_new_Add_Ons_package">see new Add-Ons package</string>
    <string name="find_Maintenance_services">find Maintenance &amp; services</string>
    <string name="Maintenance_Services">Maintenance &amp; Services</string>
    <string name="change_the_Language">change the Language</string>
    <string name="Language">Language</string>
    <string name="Logout_from_the_application">Logout from the application</string>
    <string name="Contact_Owner">Contact Owner</string>
    <string name="Car_Color">Car Color</string>
    <string name="Overview">Overview</string>
    <string name="Equipment">Equipment</string>
    <string name="Safety_And_Security">Safety And Security</string>
    <string name="Specification">Specification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_ad">update_ad</string>
    <string name="title_description2">Find your dream car and check available design features.</string>
</resources>