<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <Preference
            android:background="#ffffff"
            app:icon="@drawable/account"
            app:key="profile"
            app:summary="@string/Name_Email_Phone"
            app:title="@string/Profile">

        </Preference>
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            app:icon="@drawable/security"
            app:key="security"
            app:summary="@string/reset_password"
            app:title="@string/security" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            app:icon="@drawable/managepost"
            app:key="manage"
            app:summary="@string/Update_Delete_your_old_posts"
            app:title="@string/Manage_Posts" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            app:icon="@drawable/addpost"
            app:key="Add-Ons"
            app:summary="@string/see_new_Add_Ons_package"
            app:title="Add-Ons" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:icon="@drawable/services"
            app:key="Services"
            app:summary="@string/find_Maintenance_services"
            app:title="@string/Maintenance_Services" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:icon="@drawable/languages"
            app:key="Language"
            app:summary="@string/change_the_Language"
            app:title="@string/Language" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:icon="@drawable/logout"
            app:key="logout"
            app:summary="@string/Logout_from_the_application"
            app:title="Logout" />
    </PreferenceCategory>

</PreferenceScreen>