<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroThreeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Skip"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        />

    <ImageView
        android:layout_width="370dp"
        android:layout_height="268dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/sellcar_intro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:fontFamily="@font/semibold"
        android:text="@string/title3"/>

    <TextView
        android:layout_width="363dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:text="@string/title_description3"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/slideThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/back"
            android:fontFamily="@font/semibold"
            android:textColor="#272670"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/slideThreeFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textColor="#272670"
            android:textSize="20dp"
            android:text="@string/done"
            android:fontFamily="@font/semibold"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</LinearLayout>