<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".IntroFirstFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skipOne"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:text="Skip"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        />

    <ImageView
        android:layout_width="370dp"
        android:layout_height="268dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/intro_img" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/semibold"
        android:text="@string/title1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/title_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideOneNext"
            android:layout_width="0dp"
            android:textColor="#272670"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:fontFamily="@font/semibold"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>